css/home.css
/* ... */
.team_join_bg{
    background: url("../img/apex_bg_1.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    
    height: 100%;

}
.team_join .contents{
    text-align: center;
}
.team_join .contents h1{
    color: var(--light);
    margin-bottom: 25px;
    font: 30px oswald !important;
    font-weight: 900 !important;
}
.team_join .contents a{
    text-decoration: none;
    color: var(--light);
    font: 30px oswald;
    font-weight: 900;
    background: var(--green_3);
    padding: 15px 30px;
    border-radius: 10px;
    margin-top: 15px;
    transition: .3s;
}
.team_join .contents a:hover{
    background: var(--dark_1);
}

/* ========================================================================== */
    /* all_atchievements */
/* ========================================================================== */
.all_atchievements{
    background: url("../img/apex_bg_1.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 100vh;
    text-align: center;
}

.all_matches{
    background: url("../img/apex_bg_1.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 100vh;
    text-align: center;
}
.all_atchievements h1, .all_matches h1{
    color: var(--light) !important;
    font: 40px oswald !important;
    font-weight: 900 !important;
}






/* ============================================================================ */
/* ============================================================================ */
/* ============================================================================ */
/* ====================================RESPONSIVE============================== */
/* ============================================================================ */
/* ============================================================================ */
@media only screen and (max-width: 1200px) {
    .head_container {
      width: 100%;
    }
  }
  @media only screen and (max-width: 1263px) {
    .team_header ul{
        width: 100%;
    }
    .s{
        width: 960px;
        margin: 0 auto;
    }
  }
  @media only screen and (max-width: 1206px) {
    .container_s{
        width: 1120px !important;
    }
    .container_te{
        width: 100% !important;
    }
    #home-section{
        overflow: hidden;
    }
    .contents{
        width: 880px;
    }
    .s_embed{
        width: 600px !important;
    }
    .p_shape iframe{
        width: 600px !important;

    }
   }
   @media only screen and (max-width: 1020px){
    .our_vision p{ 
       
        right: 40px !important;
    }
}
@media only screen and (max-width: 900px) {
    .pMenuLogo{
        margin-top: 20px;
    }
    .pMenuLogo h1{
        font-size: 25px !important;
    }
    .our_vision{
        padding-top: 200px !important;
    }
    .our_vision p{ 
        width: 360px !important;
        font-size: 21px !important;
        right: 40px !important;
    }
    .s{
        width: 640px;
        margin: 0 auto;
    }
    .contents .montage{
        flex-direction: column;
    }
    .s_embed{
        width: 400px !important;
    }
    .p_shape .text h1{
        font-size: 30px !important;
    }
    .p_shape .text a{
        font-size: 15px !important;
    }
    .p_shape iframe{
        width: 400px !important;

    }
}

  
  @media only screen and (max-width: 800px) {
    .head_container {
      width: 650px;
    }
    .meetOurTeam-allBlock{
        flex-direction: column;
        align-items: center;
    }
    .menu{
        display: none;
    }
    #drop_menu{
        display: block;
    }
    .our_team .tittle{
        font-size: 25px;
    }
}

@media only screen and (max-width: 680px) {
    .head_container {
      width: 480px;
    }
    .menu li a{
        padding: 15px 5px;
    }
    .pMenuLogo{
        margin-top: 13px;
    }
    .pMenuLogo h1{
        font-size: 30px !important;
    }
    .our_vision p{
        right: 5px !important;
    }
    .s{
        flex-direction: column;
        align-items: center;
    }
    .contents{
        width: 500px;
    }
    .p_shape .text{
        left: 10%;
        display: flex;
        flex-direction: column;
    }
  }

